<resources>
    <string name="app_name">OnAir</string>
    <string name="home">主页</string>
    <string name="weekly">每周更新</string>
    <string name="following">追番</string>
    <string name="settings">设置</string>
    <string name="splash_screen">splash screen</string>
    <string name="brand_text">brand text</string>
    <string name="cover">封面</string>
    <string name="title">标题</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_hint">喵~ 输入关键词🐾</string>
    <string name="avatar">头像</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">clear history</string>
    <string name="_3_11">3:11</string>
    <string name="_1_53">1:53</string>
    <string name="danmaku_settings">弹幕设置</string>
    <string name="top">顶部</string>
    <string name="bottom">底部</string>
    <string name="rolling">滚动</string>
    <string name="danmaku_filter">弹幕屏蔽:</string>
    <string name="danmaku_alpha">弹幕透明度:</string>
    <string name="_0_5">0.5</string>
    <string name="video_speed">视频播放倍速:</string>
    <string name="_1_0">1.0</string>
    <string name="danmaku_font_size">弹幕字体大小:</string>
    <string name="_4_4">4/4</string>
    <string name="danmaku_speed">弹幕速度:</string>
    <string name="middle">中</string>
    <string name="danmaku_visible_range">弹幕显示范围:</string>
    <string name="_0_1">0.1</string>
    <string name="_1">1</string>
    <string name="_1_0_0">1.00</string>
    <string name="_0_0">0:00</string>
    <string name="re0_brief">在从便利商店回家的路上，突然被异世界召唤的少年菜月昴。在无法依靠任何东西的异世界，无力的少年手唯一的力量……那是“死去然后重新开始”的力量。为了守护最重要的人们，为了取回确实存在着又无可替代的时间，少年抗拒着绝望，勇敢地面对着残酷的命运。</string>
    <string name="re0_title">Re:从零开始的异世界生活</string>
    <string name="extension">拓展</string>
    <string name="name">名称</string>
    <string name="versionName">版本</string>
    <string name="plugin">插件</string>
    <string name="sourceName">番源</string>
</resources>