<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.OnAir"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:overScrollMode="never"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:elevation="5dp"
        android:paddingVertical="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danmaku_filter"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/danmakuFilterTopCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:button="@drawable/checkbox_danmaku_top"
                    android:text="@string/top" />

                <CheckBox
                    android:id="@+id/danmakuFilterBottomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:button="@drawable/checkbox_danmaku_bottom"
                    android:text="@string/bottom" />

                <CheckBox
                    android:id="@+id/danmakuFilterRollingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:button="@drawable/checkbox_danmaku_rolling"
                    android:text="@string/rolling" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danmaku_font_size"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/danmakuFontSizeSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="1"
                    android:value="2"
                    android:valueFrom="1"
                    android:valueTo="3"
                    app:labelBehavior="gone"
                    app:thumbColor="?colorSecondary"
                    app:thumbHeight="20dp"
                    app:tickColor="@color/white"
                    app:trackColorActive="#e8def8" />

                <TextView
                    android:id="@+id/danmakuFontSizeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/middle"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 弹幕显示范围 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danmaku_visible_range"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/danmakuVisibleRangeSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="1"
                    android:value="4"
                    android:valueFrom="1"
                    android:valueTo="4"
                    app:labelBehavior="gone"
                    app:thumbColor="?colorSecondary"
                    app:thumbHeight="20dp"
                    app:tickColor="@color/white"
                    app:trackColorActive="#e8def8" />

                <TextView
                    android:id="@+id/danmakuVisibleRangeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="全部"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 弹幕速度 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danmaku_speed"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/danmakuSpeedSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:stepSize="0.1"
                    android:value="1"
                    android:valueFrom="0.1"
                    android:valueTo="5"
                    app:labelBehavior="gone"
                    app:thumbColor="?colorSecondary"
                    app:thumbHeight="20dp"
                    app:tickVisible="false"
                    app:trackColorActive="#e8def8" />

                <TextView
                    android:id="@+id/danmakuSpeedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_1"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 弹幕透明度 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danmaku_alpha"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.slider.Slider
                    android:id="@+id/danmakuTransparencySlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:value="255"
                    android:valueFrom="0"
                    android:valueTo="255"
                    app:labelBehavior="gone"
                    app:thumbColor="?colorSecondary"
                    app:thumbHeight="20dp"
                    app:tickVisible="false"
                    app:trackColorActive="#e8def8" />

                <TextView
                    android:id="@+id/danmakuTransparencyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_1"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 视频播放倍速 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_speed"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/videoPlaybackSpeedSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:stepSize="0.25"
                    android:value="1"
                    android:valueFrom="0.25"
                    android:valueTo="2"
                    app:labelBehavior="gone"
                    app:thumbColor="?colorSecondary"
                    app:thumbHeight="20dp"
                    app:tickColor="@color/white"
                    app:trackColorActive="#e8def8" />

                <TextView
                    android:id="@+id/videoPlaybackSpeedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_1_0_0"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>




