<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.search.SearchActivity">

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingHorizontal="10dp"
            android:src="@drawable/baseline_close_24"
            app:roundPercent="1" />

        <com.arkueid.onair.common.view.EditTextWithClearButton
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/searchViewSize"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_rect"
            android:backgroundTint="@color/inputBackgroundColor"
            android:drawableLeft="@drawable/round_search_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|start"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textWebEditText"
            android:padding="10dp"
            android:textColor="#99000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/avatar" />

        <TextView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/search"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:roundPercent="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/searchHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_history"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <ImageView
        android:id="@+id/clearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clear_history"
        android:padding="10dp"
        android:src="@drawable/rounded_delete_24"
        app:layout_constraintBottom_toBottomOf="@id/searchHistory"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchHistory" />

    <com.arkueid.onair.common.view.TagLayout
        android:id="@+id/tagLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchHistory">

    </com.arkueid.onair.common.view.TagLayout>

    <ListView
        android:id="@+id/searchSuggestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/historyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="searchHistory,clearHistory,tagLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>